Thu Jul 14 12:20:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* tao/Codeset.mpc:

	  Added PIDL_Files and Resource_Files definitions so that bogus
	  definitions aren't added to the project.

Thu Jul 14 10:51:38 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/RTCORBA_Baseline.mpc:
	* orbsvcs/performance-tests/RTEvent/RTCORBA_Callback/RTCORBA_Callback.mpc:

          Add *_IDL projects for compiling *.idl files.  This eliminates
          duplicate rules that would otherwise result when Makefile.am's
          are aggregated in the automake build.

Thu Jul 14 08:38:48 2005  Gary Maxey <gary.maxey@hp.com>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp
        * tests/OBV/ValueBox/Test_impl.cpp
        * tests/OBV/ValueBox/client.cpp
        * tests/OBV/ValueBox/server.cpp:

          Fixed platform-specific errors.

Thu Jul 14 09:06:53 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset/codeset_export.h:

          Another round of fixes.

Thu Jul 14 08:11:27 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/Codeset/codeset_export.h:
        * tao/Codeset/Codeset_Manager_i.cpp:
        * tao/Codeset/UTF16_BOM_Factory.cpp:
        * tao/Codeset/UTF8_Latin1_Factory.cpp:
        * tao/Codeset/UTF8_Latin1_Translator.cpp:

          Fixed more platform-specific errors.

Thu Jul 14 08:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.i:
          Removed not needed ;

Thu Jul 14 09:37:54 2005  Boris Kolpackov  <boris@kolpackov.net>

	* orbsvcs/examples/Notify/Federation/Agent/Agent.cpp:
	* orbsvcs/examples/Notify/Federation/SpaceCraft/SpaceCraft.cpp:

	  Fixed a number of fuzz errors.

Wed Jul 13 21:51:15 2005  Phil Mesnier  <mesnier_p@ociweb.com>

        * tao/ORB_Core.h:

          I forgot to take out the unneeded CORBA::Environment arg from
          load_codeset_manager. This was caught by a No Exceptions build.
