@@ -1,3 +1,9 @@
+Thu Jul 14 21:42:43 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * docs/performace.html:
+        
+          Updated section on ways to reduce compile-time footprint.
+
 Thu Jul 14 12:20:59 2005  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* tao/Codeset.mpc:
